--- a/LGTM/Base.lproj/Main.storyboard
+++ b/LGTM/Base.lproj/Main.storyboard
@@ -676,7 +676,7 @@
         <scene sceneID="hIz-AP-VOD">
             <objects>
                 <viewController title="lgtm.in" id="XfG-lQ-9wD" customClass="ViewController" customModule="LGTM" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" id="m2S-Jp-Qdl" customClass="View" customModule="LGTM" customModuleProvider="target">
+                    <view key="view" id="m2S-Jp-Qdl">
                         <rect key="frame" x="0.0" y="0.0" width="480" height="350"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
@@ -770,7 +770,7 @@
         <scene sceneID="uRD-tA-voo">
             <objects>
                 <viewController title="favorites" id="oik-qd-hcl" customClass="ViewController" customModule="LGTM" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" id="L6L-IP-b6X" customClass="View" customModule="LGTM" customModuleProvider="target">
+                    <view key="view" id="L6L-IP-b6X">
                         <rect key="frame" x="0.0" y="0.0" width="480" height="350"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
